--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "start": "node build/app.js",
     "build": "tsc",
-    "dev": "ts-node src/app.ts",
-    "ndm":"nodemon"
+    "dev":"nodemon"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
